--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -63,7 +63,7 @@
 
    <footer class="footer">
       <mark>
-         Живи! - а працюй у вільний час.
+         Живи - а працюй у вільний час!
       </mark>
       <div class="socials">
          <a href="https://t.me/bod9_semeniuk" class="socials__link" target="_blank">
