--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -64,10 +64,10 @@
          Живи - а працюй у вільний час!
       </mark>
       <div class="socials">
-         <a href="https://t.me/bod9_semeniuk" class="socials__link" target="_blank">
+         <a href="https://t.me/bod9_semeniuk" class="socials-link" target="_blank">
             Telegram
          </a>
-         <a href="https://github.com/bohdansem1" class="socials__link" target="_blank">
+         <a href="https://github.com/bohdansem1" class="socials-link" target="_blank">
             Github
          </a>
       </div>
