--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -23,38 +23,35 @@
          </a>
          , а також починав вивчати C++ за порадою знайомих, але через деякий час труднощі взяли гору і я це діло закинув. Тому зараз маючи певні збереження і можливості, я покинув роботу і з головою поринаю в навчання. Також мені допомагає переконання що програмуання це хоч і складна технічна професія але досягнути її може кожен бажаючий, головне не здаватись і правильно вчитись. <br>
       </div>
+     <h2>Хоббі</h2>
       <ul class="unordered">
          <li class="u-item">
-            <a href="https://www.google.com.ua" target="_blank">
-               Item
-            </a>
+            Я дуже люблю футбол
          </li>
          <li class="u-item">
-            Item
+            Також іноді вболіваю за NAVI в CS:GO
             <ol class="ordered">
                <li class="o-item">
-                  Item
+                  Від недавніх пір я дуже полюбив подорожі
                </li>
                <li class="o-item">
-                  <a href="https://www.youtube.com/" target="_blank">
-                     Item
-                  </a>
+                  Нарахунок домашніх тварин, віддаю перевагу котам, маю 2
                </li>
                <li class="o-item">
-                  Item
+                  Люблю читати біографії відомих людей, адже це цікаво прочитати історію життя тривалістю в 70 років за кілька днів
                </li>
             </ol>
          </li>
          <li class="u-item">
-            Item
+            Щоранку приймаю холодний душ, бррр
             <ul>
                <li>
-                  Item
+                  Практикую метод Вім Хофа - дихальні вправи
                </li>
             </ul>
          </li>
          <li class="u-item">
-            Item
+            Дякую ЗСУ за можливість навчатись!
          </li>
       </ul>
    </main>
