--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -170,7 +170,7 @@
          </h2>
          <div class="learn-descr">
             <p>
-               <a href="https://prjctr.com/course/react-uk" class="course link" style="color: blue;">React JS курс</a>
+               <a href="https://prjctr.com/course/react-uk" class="course link" target="_blank" title="Це просто приклад, в Жеки краще))" style="color: blue;">React JS курс</a>
                від Projector розроблено спеціально для
                початківців. За 3 місяці студенти проходять базовий курс по Реакту, опановують документацію та
                компоненти, практикуються у розробці застосунків з React. Уроки спрямовані на практичне вивчення та
