--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -246,7 +246,7 @@
       <ul class="footer-list">
          <li class="footer-list-item">
             <a href="https://cases.media/article/sho-take-react-js-yak-pochati-vivchati-reakt-navichki-dlya-react-developer"
-               class="link" style="color: blue;">Ресурс</a>
+               class="link" target="_blank" style="color: blue;">Ресурс</a>
          </li>
          <li class="footer-list-item">
             <a href="#up" class="link" style="color: blue;">Нагору</a>
