--- a/lesson_8/index.html
+++ b/lesson_8/index.html
@@ -248,9 +248,9 @@
                   In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable &
                   Affordable fashion 24/7
                </div>
-               <div class="everyday-btn">
+               <a href="#!" class="everyday-btn">
                   Shop Now
-               </div>
+               </a>
             </div>
             <div class="box2"></div>
          </div>
