--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -258,21 +258,25 @@
                <h2 class="jewels-title">We Develop Create <br> Custom Jewels.</h2>
             </div>
             <div class="jew1">
-               <div class="pic pic1">
-                  <img src="img/jew1.jpg" alt="jewels">
-               </div>
-               <h3 class="name">Embossed hoop earrings</h3>
-               <h3 class="price">$144.00</h3>
+               <a href="#!" class="lew1-link">
+                  <div class="pic pic1">
+                     <img src="img/jew1.jpg" alt="jewels">
+                  </div>
+                  <h3 class="name">Embossed hoop earrings</h3>
+                  <h3 class="price">$144.00</h3>
+               </a>
             </div>
             <div class="jew2">
-               <h3 class="jew2-title">
-                  #02 <br> new jewellery <br> collection
-               </h3>
-               <div class="pic pic2">
-                  <img src="img/jew2.jpg" alt="jewels">
-               </div>
-               <h3 class="name">Embossed hoop earrings</h3>
-               <h3 class="price">$144.00</h3>
+               <a href="#!" class="lew2-link">
+                  <h3 class="jew2-title">
+                     #02 <br> new jewellery <br> collection
+                  </h3>
+                  <div class="pic pic2">
+                     <img src="img/jew2.jpg" alt="jewels">
+                  </div>
+                  <h3 class="name">Embossed hoop earrings</h3>
+                  <h3 class="price">$144.00</h3>
+               </a>
             </div>
          </div>
       </div>
