--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -258,7 +258,10 @@
                <h2 class="jewels-title">We Develop Create <br> Custom Jewels.</h2>
             </div>
             <div class="jew1">
-               <a href="#!" class="lew1-link">
+               <a href="#!" class="jew1-link">
+                  <h3 class="jew1-title">
+                     #01 <br> new jewellery <br> collection
+                  </h3>
                   <div class="pic pic1">
                      <img src="img/jew1.jpg" alt="jewels">
                   </div>
@@ -267,7 +270,7 @@
                </a>
             </div>
             <div class="jew2">
-               <a href="#!" class="lew2-link">
+               <a href="#!" class="jew2-link">
                   <h3 class="jew2-title">
                      #02 <br> new jewellery <br> collection
                   </h3>
