--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -13,8 +13,16 @@
       Lesson #9
    </header>
 
+
+   <!-- <div class="paralax">
+      <img src="img/withoutme.png" class="withoutme" alt="">
+      <img src="img/mountains1.png" class="mountains1" alt="">
+      <img src="img/grass-par.png" class="grass-par" alt="">
+      <img src="img/me.png" class="me" alt="">
+   </div> -->
    <main class="main">
       <div class="wrap">
+
          <div class="block">
             <a href="!#" class="link">Show Image</a>
             <div class="image">
