--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -73,14 +73,14 @@
 				<div class="practice__item item-3d">
 					<div class="practice__3d-translate block">
 						<p>
-							Rranslate3D
+							translate3D
 						</p>
 					</div>
 				</div>
 				<div class="practice__item item-3d">
 					<div class="practice__3d-rotate block">
 						<p>
-							Rotate3D
+							rotate3D
 						</p>
 					</div>
 				</div>
