--- a/lesson_13/car.html
+++ b/lesson_13/car.html
@@ -12,7 +12,7 @@
 <body>
    <div class="wrapper">
       <header>
-         <a href="index.html" class="car">
+         <a href="index.html" class="back">
             Back</a>
       </header>
       <main class="car">
