--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
@@ -10,7 +10,7 @@
 
 <body>
 	<div class="wrapper">
-		<header class="header">
+		<header class="header header--margin">
 			<div class="header__wrapper">
 				<div class="header__items">
 					<a href="#" class="header__link-main"><img src="img/logo.svg" alt="logo" class="header__logo"></a>
@@ -31,7 +31,7 @@
 					<div class="categories__column">
 						<div class="categories__item-card card-item">
 							<a href="#" class="card-item__image">
-								<img src="img/men1.png" alt="shirt">
+								<img src="img/men1.webp" alt="shirt">
 							</a>
 							<a href="#" class="card-item__txt txt-card">
 								<div class="txt-card__body">
@@ -46,7 +46,7 @@
 					<div class="categories__column">
 						<div class="categories__item-card card-item">
 							<a href="#" class="card-item__image">
-								<img src="img/men2.png" alt="shirt">
+								<img src="img/men2.webp" alt="shirt">
 							</a>
 							<a href="#" class="card-item__txt txt-card">
 								<div class="txt-card__body">
@@ -61,7 +61,7 @@
 					<div class="categories__column">
 						<div class="categories__item-card card-item">
 							<a href="#" class="card-item__image">
-								<img src="img/men3.png" alt="shirt">
+								<img src="img/men3.webp" alt="shirt">
 							</a>
 							<a href="#" class="card-item__txt txt-card">
 								<div class="txt-card__body">
@@ -76,7 +76,7 @@
 					<div class="categories__column">
 						<div class="categories__item-card card-item">
 							<a href="#" class="card-item__image">
-								<img src="img/men4.png" alt="shirt">
+								<img src="img/men4.webp" alt="shirt">
 							</a>
 							<a href="#" class="card-item__txt txt-card">
 								<div class="txt-card__body">
@@ -91,7 +91,7 @@
 					<div class="categories__column">
 						<div class="categories__item-card card-item">
 							<a href="#" class="card-item__image">
-								<img src="img/men5.png" alt="shirt">
+								<img src="img/men5.webp" alt="shirt">
 							</a>
 							<a href="#" class="card-item__txt txt-card">
 								<div class="txt-card__body">
@@ -106,7 +106,7 @@
 					<div class="categories__column">
 						<div class="categories__item-card card-item">
 							<a href="#" class="card-item__image">
-								<img src="img/men6.png" alt="shirt">
+								<img src="img/men6.webp" alt="shirt">
 							</a>
 							<a href="#" class="card-item__txt txt-card">
 								<div class="txt-card__body">
@@ -121,7 +121,7 @@
 					<div class="categories__column">
 						<div class="categories__item-card card-item">
 							<a href="#" class="card-item__image">
-								<img src="img/men7.png" alt="shirt">
+								<img src="img/men7.webp" alt="shirt">
 							</a>
 							<a href="#" class="card-item__txt txt-card">
 								<div class="txt-card__body">
@@ -136,7 +136,7 @@
 					<div class="categories__column">
 						<div class="categories__item-card card-item">
 							<a href="#" class="card-item__image">
-								<img src="img/men8.png" alt="shirt">
+								<img src="img/men8.webp" alt="shirt">
 							</a>
 							<a href="#" class="card-item__txt txt-card">
 								<div class="txt-card__body">
@@ -157,7 +157,7 @@
 								<img src="img/cross.svg" alt="cross" width="22">
 							</a>
 							<a href="#" class="item-wishlist__picture">
-								<img src="img/wish1.png" alt="Blue Flower Print Crop Top">
+								<img src="img/wish1.webp" alt="Blue Flower Print Crop Top">
 							</a>
 							<div class="item-wishlist__information information">
 								<div class="information__descr">
@@ -176,16 +176,16 @@
 								<img src="img/cross.svg" alt="cross" width="22">
 							</a>
 							<a href="#" class="item-wishlist__picture">
-								<img src="img/wish1.png" alt="Blue Flower Print Crop Top">
+								<img src="img/wish2.webp" alt="Blue Flower Print Crop Top">
 							</a>
 							<div class="item-wishlist__information information">
 								<div class="information__descr">
-									<a href="#" class="information__name">Blue Flower Print Crop Top </a>
+									<a href="#" class="information__name">Yellow Flower Print Dress</a>
 									<div class="information__color">Color: <span>Yellow</span></div>
 									<div class="information__quantity">Quantity: 1</div>
 								</div>
 								<div class="information__options options">
-									<div class="options__price">$29.00</div>
+									<div class="options__price">$78.00</div>
 									<a href="#" class="options__add-to-cart button-purple">Add to cart</a>
 								</div>
 							</div>
@@ -195,46 +195,188 @@
 								<img src="img/cross.svg" alt="cross" width="22">
 							</a>
 							<a href="#" class="item-wishlist__picture">
-								<img src="img/wish1.png" alt="Blue Flower Print Crop Top">
+								<img src="img/wish3.webp" alt="Blue Flower Print Crop Top">
 							</a>
 							<div class="item-wishlist__information information">
 								<div class="information__descr">
 									<a href="#" class="information__name">Blue Flower Print Crop Top </a>
-									<div class="information__color">Color: <span>Yellow</span></div>
+									<div class="information__color">Color: <span>White</span></div>
 									<div class="information__quantity">Quantity: 1</div>
 								</div>
 								<div class="information__options options">
-									<div class="options__price">$29.00</div>
+									<div class="options__price">$134.00</div>
 									<a href="#" class="options__add-to-cart button-purple">Add to cart</a>
 								</div>
 							</div>
 						</div>
 						<div class="wishlist__item item-wishlist">
 							<a class="item-wishlist__delete" href="#">
-								<img src="img/cross.svg" alt="cross" width="22">
+								<img src="img/cross.svg" alt="cross">
 							</a>
 							<a href="#" class="item-wishlist__picture">
-								<img src="img/wish1.png" alt="Blue Flower Print Crop Top">
+								<img src="img/wish4.webp" alt="Blue Flower Print Crop Top">
 							</a>
 							<div class="item-wishlist__information information">
 								<div class="information__descr">
-									<a href="#" class="information__name">Blue Flower Print Crop Top </a>
-									<div class="information__color">Color: <span>Yellow</span></div>
+									<a href="#" class="information__name">Brown men’s long sleeve T-shirt</a>
+									<div class="information__color">Color: <span>Brown</span></div>
 									<div class="information__quantity">Quantity: 1</div>
 								</div>
 								<div class="information__options options">
-									<div class="options__price">$29.00</div>
+									<div class="options__price">$93.00</div>
 									<a href="#" class="options__add-to-cart button-purple">Add to cart</a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+				<div class="orders orders--margin">
+					<h2 class="title title--wish">My Orders</h2>
+					<div class="orders__container">
+						<div class="orders__item item-order">
+							<div class="item-order__info info">
+								<div class="info__number">Order no: #123456789</div>
+								<div class="info__descr descr-info">
+									<div class="descr-info__left">
+										<div class="descr-info__date-order">
+											Order Date : <span class="descr-info__value">2 June 2023 2:40 PM</span>
+										</div>
+										<div class="descr-info__delivery-date">
+											Estimated Delivery Date : <span class="descr-info__value">8 June 2023</span>
+										</div>
+									</div>
+									<div class="descr-info__right">
+										<div class="descr-info__status">
+											Order Status : <span class="descr-info__value">Inprogress</span>
+										</div>
+										<div class="descr-info__payment">
+											Payment Method : <span class="descr-info__value">Cash on delivery</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="item-order__result result">
+								<div class="item-wishlist result__item">
+									<a href="#" class="item-wishlist__picture result__picture ">
+										<img src="img/order1.webp" alt="Blue Flower Print Crop Top">
+									</a>
+									<div class="result__order-info info-order">
+										<div class="info-order__decr">
+											<a href="#" class="info-order__name">Blue Flower Print Crop Top </a>
+											<div class="info-order__color">Color: <span class="info-order__style">Yellow</span>
+											</div>
+											<div class="info-order__quantity">Qty: <span class="info-order__style">1</span></div>
+											<div class="info-order__price">Total: $29.00</div>
+										</div>
+										<div class="info-order__detail">
+											<a href="#" class="button-purple detail">View Detail</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<hr>
+						</div>
+						<div class="orders__item item-order">
+							<div class="item-order__info info">
+								<div class="info__number">Order no: #123456789</div>
+								<div class="info__descr descr-info">
+									<div class="descr-info__left">
+										<div class="descr-info__date-order">
+											Order Date : <span class="descr-info__value">2 June 2023 2:40 PM</span>
+										</div>
+										<div class="descr-info__delivery-date">
+											Estimated Delivery Date : <span class="descr-info__value">8 June 2023</span>
+										</div>
+									</div>
+									<div class="descr-info__right">
+										<div class="descr-info__status">
+											Order Status : <span class="descr-info__value">Shipped</span>
+										</div>
+										<div class="descr-info__payment">
+											Payment Method : <span class="descr-info__value">Cash on delivery</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="item-order__result result">
+								<div class="item-wishlist result__item">
+									<a href="#" class="item-wishlist__picture result__picture ">
+										<img src="img/order2.webp" alt="Printed blue & white Cote ">
+									</a>
+									<div class="result__order-info info-order">
+										<div class="info-order__decr">
+											<a href="#" class="info-order__name">Printed blue & white Cote </a>
+											<div class="info-order__color">Color: <span class="info-order__style">White</span>
+											</div>
+											<div class="info-order__quantity">Qty: <span class="info-order__style">1</span></div>
+											<div class="info-order__price">Total: $143.00</div>
+										</div>
+										<div class="info-order__detail">
+											<a href="#" class="button-purple detail">View Detail</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<hr>
+						</div>
+						<div class="orders__item item-order">
+							<div class="item-order__info info">
+								<div class="info__number">Order no: #123456789</div>
+								<div class="info__descr descr-info">
+									<div class="descr-info__left">
+										<div class="descr-info__date-order">
+											Order Date : <span class="descr-info__value">2 June 2023 2:40 PM</span>
+										</div>
+										<div class="descr-info__delivery-date">
+											Estimated Delivery Date : <span class="descr-info__value">8 June 2023</span>
+										</div>
+									</div>
+									<div class="descr-info__right">
+										<div class="descr-info__status">
+											Order Status : <span class="descr-info__value">Inprogress</span>
+										</div>
+										<div class="descr-info__payment">
+											Payment Method : <span class="descr-info__value">Cash on delivery</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="item-order__result result">
+								<div class="item-wishlist result__item">
+									<a href="#" class="item-wishlist__picture result__picture ">
+										<img src="img/order3.webp" alt="Blue Shirt">
+									</a>
+									<div class="result__order-info info-order">
+										<div class="info-order__decr">
+											<a href="#" class="info-order__name">Blue Shirt</a>
+											<div class="info-order__color">Color: <span class="info-order__style">Blue</span></div>
+											<div class="info-order__quantity">Qty: <span class="info-order__style">1</span></div>
+											<div class="info-order__price">Total: $93.00</div>
+										</div>
+										<div class="info-order__detail">
+											<a href="#" class="button-purple detail">View Detail</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<hr>
+						</div>
+					</div>
+				</div>
 			</div>
+
+			<!-- <div class="example">
+				<div class="block-A block"></div>
+				<div class="block-B block"></div>
+				<div class="block-C block"></div>
+				<div class="block-D block"></div>
+			</div> -->
 		</main>
 
 		<footer class="footer">
-
+			<p>
+				I'm FooteR
+			</p>
 		</footer>
 	</div>
 </body>
