--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -263,7 +263,7 @@
 									<div class="result__order-info info-order">
 										<div class="info-order__decr">
 											<a href="#" class="info-order__name">Blue Flower Print Crop Top </a>
-											<div class="info-order__color">Color: <span class="info-order__style">Yellow</span>
+											<div class="info-order__color">Color: <span class="info-order__style">Pink</span>
 											</div>
 											<div class="info-order__quantity">Qty: <span class="info-order__style">1</span></div>
 											<div class="info-order__price">Total: $29.00</div>
