--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -52,7 +52,7 @@
 						</div>
 						<div class="info-form__item">
 							<label class="info-form__label" for="f-name">Last Name*</label>
-							<input required placeholder="Last Name" id="f-name" name="name" type="text">
+							<input required placeholder="Last Name" id="l-name" name="last-name" type="text">
 						</div>
 						<div class="info-form__item">
 							<label class="info-form__label" for="country">Country / Region*</label>
@@ -77,7 +77,7 @@
 						</div>
 						<div class="info-form__item">
 							<label class="info-form__label" for="state">State*</label>
-							<select required id="state" name="state">
+							<select required id="state" size="5" name="state">
 								<option value="State" selected hidden>State</option>
 								<option value="Arizona">Arizona</option>
 								<option value="California">California</option>
@@ -129,33 +129,34 @@
 							<input required placeholder="First Name" id="f-name" name="name" type="text">
 						</div>
 						<div class="info-form__item info-form__item--check-out">
-							<label class="info-form__label" for="f-name">Last Name*</label>
-							<input required placeholder="Last Name" id="f-name" name="name" type="text">
+							<label class="info-form__label" for="first-name">Last Name*</label>
+							<input required placeholder="Last Name" id="first-name" name="name" type="text">
 						</div>
 						<div class="info-form__item info-form__item--check-out">
-							<label class="info-form__label" for="country">Country / Region*</label>
-							<input required placeholder="Country / Region" id="country" name="name" type="text">
+							<label class="info-form__label" for="country-checkout">Country / Region*</label>
+							<input required placeholder="Country / Region" id="country-checkout" name="name" type="text">
 						</div>
 						<div class="info-form__item info-form__item--check-out">
-							<label class="info-form__label" for="comoany">Company Name</label>
-							<input placeholder="Company (optional)" id="company" name="name" type="text">
+							<label class="info-form__label" for="comoany-checkout">Company Name</label>
+							<input placeholder="Company (optional)" id="company-checkout" name="name" type="text">
 						</div>
 						<div class="info-form__item info-form__item--check-out">
-							<label class="info-form__label" for="street">Street Address*</label>
-							<input required placeholder="House number and street name" id="street" name="name" type="text">
-						</div>
-						<div class="info-form__item info-form__item--check-out">
-							<label class="info-form__label" for="apartment">Apt, suite, unit</label>
-							<input placeholder="apartment, suite, unit, etc. (optional)" id="apartment" name="apartment"
+							<label class="info-form__label" for="street-checkout">Street Address*</label>
+							<input required placeholder="House number and street name" id="street-checkout" name="name"
 								type="text">
 						</div>
+						<div class="info-form__item info-form__item--check-out">
+							<label class="info-form__label" for="apartment-checkout">Apt, suite, unit</label>
+							<input placeholder="apartment, suite, unit, etc. (optional)" id="apartment-checkout"
+								name="apartment" type="text">
+						</div>
 						<div class="info-form__item info-form__item--check-out info-form__item--col3">
-							<label class="info-form__label" for="city">City*</label>
-							<input required placeholder="Town / City" id="city" name="city" type="text">
+							<label class="info-form__label" for="city-checkout">City*</label>
+							<input required placeholder="Town / City" id="city-checkout" name="city" type="text">
 						</div>
 						<div class="info-form__item  info-form__item--check-out info-form__item--col3">
-							<label class="info-form__label" for="state">State*</label>
-							<select required id="state" name="state">
+							<label class="info-form__label" for="state-checkout">State*</label>
+							<select required id="state-checkout" name="state">
 								<option value="State" selected hidden>State</option>
 								<option value="Arizona">Arizona</option>
 								<option value="California">California</option>
