--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -59,7 +59,7 @@
 							<input required placeholder="Country / Region" id="country" name="name" type="text">
 						</div>
 						<div class="info-form__item">
-							<label class="info-form__label" for="comoany">Company Name</label>
+							<label class="info-form__label" for="company">Company Name</label>
 							<input placeholder="Company (optional)" id="company" name="name" type="text">
 						</div>
 						<div class="info-form__item">
@@ -125,8 +125,8 @@
 				<form action="#" method="GET" enctype="multipart/form-data" class="info-form info-form--check-out">
 					<div class="info-form__body info-form__body--check-out">
 						<div class="info-form__item info-form__item--check-out">
-							<label class="info-form__label" for="f-name">First Name*</label>
-							<input required placeholder="First Name" id="f-name" name="name" type="text">
+							<label class="info-form__label" for="info-f-name">First Name*</label>
+							<input required placeholder="First Name" id="info-f-name" name="name" type="text">
 						</div>
 						<div class="info-form__item info-form__item--check-out">
 							<label class="info-form__label" for="first-name">Last Name*</label>
@@ -137,7 +137,7 @@
 							<input required placeholder="Country / Region" id="country-checkout" name="name" type="text">
 						</div>
 						<div class="info-form__item info-form__item--check-out">
-							<label class="info-form__label" for="comoany-checkout">Company Name</label>
+							<label class="info-form__label" for="company-checkout">Company Name</label>
 							<input placeholder="Company (optional)" id="company-checkout" name="name" type="text">
 						</div>
 						<div class="info-form__item info-form__item--check-out">
@@ -165,12 +165,12 @@
 							</select>
 						</div>
 						<div class="info-form__item info-form__item--check-out info-form__item--col3">
-							<label class="info-form__label" for="post-code">Postal Code*</label>
-							<input required placeholder="Postal Code" id="post-code" name="post-code" type="text">
+							<label class="info-form__label" for="info-post-code">Postal Code*</label>
+							<input required placeholder="Postal Code" id="info-post-code" name="post-code" type="text">
 						</div>
 						<div class="info-form__item info-form__item--check-out">
-							<label class="info-form__label" for="phone">Phone*</label>
-							<input required placeholder="Phone" id="phone" name="phone" type="tel">
+							<label class="info-form__label" for="info-phone">Phone*</label>
+							<input required placeholder="Phone" id="info-phone" name="info-phone" type="tel">
 						</div>
 					</div>
 					<div class="info-form__buttons">
@@ -197,14 +197,14 @@
 				</div>
 				<div class="delivery-form__item item-delivery">
 					<div class="item-delivery__wrapper-input">
-						<input checked class="item-delivery__input" id="delivery-form__adress" required autocomplete="off"
-							value="yes" name="adress" type="radio">
+						<input checked class="item-delivery__input" id="delivery-form__adress" required value="yes"
+							name="adress" type="radio">
 						<label class="delivery-form__label" for="delivery-form__adress">Same as Billing address</label>
 					</div>
 					<hr class="item-delivery__line">
 					<div class="item-delivery__wrapper-input">
-						<input class="item-delivery__input" id="different-adress" required autocomplete="off" value="yes"
-							name="adress" type="radio">
+						<input class="item-delivery__input" id="different-adress" required value="yes" name="adress"
+							type="radio">
 						<label class="delivery-form__label" for="different-adress">Use a different shipping address</label>
 					</div>
 				</div>
@@ -238,8 +238,8 @@
 				</div>
 				<div class="delivery-form__item item-delivery item-delivery--payment">
 					<div class="item-delivery__wrapper-input item-delivery__wrapper-input--payment">
-						<input checked class="item-delivery__input" id="credit" required autocomplete="on" value="yes"
-							name="adress" type="radio">
+						<input checked class="item-delivery__input" id="credit" required value="yes" name="credit-card"
+							type="radio">
 						<label class="delivery-form__label" for="credit">Credit Card</label>
 						<h2 class="subtitle subtitle--padding">
 							We accept all major credit cards.
@@ -259,8 +259,7 @@
 					</div>
 					<hr class="item-delivery__line">
 					<div class="item-delivery__wrapper-input item-delivery__wrapper-input--payment">
-						<input class="item-delivery__input" id="cash" required autocomplete="off" value="yes" name="adress"
-							type="radio">
+						<input class="item-delivery__input" id="cash" required value="yes" name="cash" type="radio">
 						<label class="delivery-form__label" for="cash">Cash on delivery</label>
 						<h2 class="subtitle subtitle--padding">
 							Pay with cash upon delivery.
@@ -268,8 +267,7 @@
 					</div>
 					<hr class="item-delivery__line">
 					<div class="item-delivery__wrapper-input item-delivery__wrapper-input--payment">
-						<input class="item-delivery__input" id="paypal" required autocomplete="off" value="yes" name="adress"
-							type="radio">
+						<input class="item-delivery__input" id="paypal" required value="yes" name="paypal" type="radio">
 						<label class="delivery-form__label" for="paypal">Paypal</label>
 					</div>
 				</div>
