--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -156,7 +156,7 @@
 						</div>
 						<div class="info-form__item  info-form__item--check-out info-form__item--col3">
 							<label class="info-form__label" for="state-checkout">State*</label>
-							<select required id="state-checkout" name="state">
+							<select id="state-checkout" name="state">
 								<option value="State" selected hidden>State</option>
 								<option value="Arizona">Arizona</option>
 								<option value="California">California</option>
