--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -77,8 +77,8 @@
 						</div>
 						<div class="info-form__item">
 							<label class="info-form__label" for="state">State*</label>
-							<select required id="state" size="5" name="state">
-								<option value="State" selected hidden>State</option>
+							<select id="state" name="state">
+								<option value="" selected hidden>State</option>
 								<option value="Arizona">Arizona</option>
 								<option value="California">California</option>
 								<option value="Idaho">Idaho</option>
@@ -157,7 +157,7 @@
 						<div class="info-form__item  info-form__item--check-out info-form__item--col3">
 							<label class="info-form__label" for="state-checkout">State*</label>
 							<select id="state-checkout" name="state">
-								<option value="State" selected hidden>State</option>
+								<option value="" selected hidden>State</option>
 								<option value="Arizona">Arizona</option>
 								<option value="California">California</option>
 								<option value="Idaho">Idaho</option>
