--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -238,7 +238,7 @@
 				</div>
 				<div class="delivery-form__item item-delivery item-delivery--payment">
 					<div class="item-delivery__wrapper-input item-delivery__wrapper-input--payment">
-						<input checked class="item-delivery__input" id="credit" required value="yes" name="credit-card"
+						<input checked class="item-delivery__input" id="credit" required value="yes" name="payment"
 							type="radio">
 						<label class="delivery-form__label" for="credit">Credit Card</label>
 						<h2 class="subtitle subtitle--padding">
@@ -259,7 +259,7 @@
 					</div>
 					<hr class="item-delivery__line">
 					<div class="item-delivery__wrapper-input item-delivery__wrapper-input--payment">
-						<input class="item-delivery__input" id="cash" required value="yes" name="cash" type="radio">
+						<input class="item-delivery__input" id="cash" required value="yes" name="payment" type="radio">
 						<label class="delivery-form__label" for="cash">Cash on delivery</label>
 						<h2 class="subtitle subtitle--padding">
 							Pay with cash upon delivery.
@@ -267,7 +267,7 @@
 					</div>
 					<hr class="item-delivery__line">
 					<div class="item-delivery__wrapper-input item-delivery__wrapper-input--payment">
-						<input class="item-delivery__input" id="paypal" required value="yes" name="paypal" type="radio">
+						<input class="item-delivery__input" id="paypal" required value="yes" name="payment" type="radio">
 						<label class="delivery-form__label" for="paypal">Paypal</label>
 					</div>
 				</div>
