--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -119,6 +119,7 @@
 					</div>
 				</form>
 			</div>
+			<!-- 	Далі я напевно трохи намудрував з перевикористанням блоків, хотів би почути як це краще робити, але валідатор ніби як пропускає😅 -->
 			<div class="my-info my-info--margin my-info--check-out">
 				<h2 class="my-info__title my-info__title--check-out">Check Out</h2>
 				<h2 class="my-info__sub-title my-info__sub-title--check-out">Billing Details</h2>
@@ -205,7 +206,7 @@
 					<div class="item-delivery__wrapper-input item-delivery__wrapper-input--adress">
 						<input class="item-delivery__input" id="different-adress" required value="yes" name="adress"
 							type="radio">
-						<label class="delivery-form__label delivery-form__label--before-flex" for="different-adress">Use a
+						<label class="delivery-form__label" for="different-adress">Use a
 							different shipping address</label>
 					</div>
 				</div>
