--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -51,7 +51,7 @@
 							<input required placeholder="First Name" id="f-name" name="name" type="text">
 						</div>
 						<div class="info-form__item">
-							<label class="info-form__label" for="f-name">Last Name*</label>
+							<label class="info-form__label" for="l-name">Last Name*</label>
 							<input required placeholder="Last Name" id="l-name" name="last-name" type="text">
 						</div>
 						<div class="info-form__item">
@@ -77,7 +77,7 @@
 						</div>
 						<div class="info-form__item">
 							<label class="info-form__label" for="state">State*</label>
-							<select id="state" name="state">
+							<select id="state" name="state" required>
 								<option value="" selected hidden>State</option>
 								<option value="Arizona">Arizona</option>
 								<option value="California">California</option>
@@ -157,7 +157,7 @@
 						</div>
 						<div class="info-form__item  info-form__item--check-out info-form__item--col3">
 							<label class="info-form__label" for="state-checkout">State*</label>
-							<select id="state-checkout" name="state">
+							<select id="state-checkout" name="state" required>
 								<option value="" selected hidden>State</option>
 								<option value="Arizona">Arizona</option>
 								<option value="California">California</option>
@@ -253,10 +253,11 @@
 							<img src="img/paypass.png" alt="paypass">
 						</div>
 						<div class="item-delivery__card-info card-info">
-							<input autocomplete="on" type="text" name="card-number" placeholder="Card Number" id="card-number">
-							<input type="text" name="card-name" placeholder="Name of card" id="card-name">
-							<input type="text" name="card-date" placeholder="Expiration date (MM/YY)" id="card-date">
-							<input type="password" name="card-code" placeholder="Security Code" id="card-code">
+							<input autocomplete="on" type="text" name="card-number" placeholder="Card Number" id="card-number"
+								required>
+							<input type="text" name="card-name" placeholder="Name of card" id="card-name" required>
+							<input type="text" name="card-date" placeholder="Expiration date (MM/YY)" id="card-date" required>
+							<input type="password" name="card-code" placeholder="Security Code" id="card-code" required>
 						</div>
 					</div>
 					<hr class="item-delivery__line">
