--- a/lesson_19/index.html
+++ b/lesson_19/index.html
@@ -66,8 +66,8 @@
 								<h2 class="content__phrase">Dress up in summer vibe</h2>
 								<div class="content__discount">UPTO 50% OFF</div>
 								<div class="content__buttons">
-									<img src="img/arrow-white.svg" alt="arrow">
 									<a href="#" class="content__shop-now">SHOP NOW</a>
+									<img class="content__arrow" src="img/arrow-white.svg" alt="arrow">
 								</div>
 							</div>
 						</div>
@@ -79,8 +79,8 @@
 								<h2 class="content__phrase">New Designs Every Week</h2>
 								<div class="content__discount">UPTO 40% OFF</div>
 								<div class="content__buttons content__buttons--02">
-									<img src="img/arrow-white.svg" alt="arrow">
 									<a href="#" class="content__shop-now">SHOP NOW</a>
+									<img class="content__arrow" src="img/arrow-white.svg" alt="arrow">
 								</div>
 							</div>
 						</div>
@@ -91,8 +91,8 @@
 								<h2 class="content__phrase">Move with style & comfort</h2>
 								<div class="content__discount">UPTO 50% OFF</div>
 								<div class="content__buttons">
-									<img src="img/arrow-black.svg" alt="arrow">
 									<a href="#" class="content__shop-now content__shop-now--black">SHOP NOW</a>
+									<img class="content__arrow" src="img/arrow-black.svg" alt="arrow">
 								</div>
 							</div>
 						</div>
@@ -103,10 +103,10 @@
 								<h2 class="content__phrase">Live In Confort</h2>
 								<div class="content__discount">UPTO 60% OFF</div>
 								<div class="content__buttons content__buttons--big">
-									<img src="img/arrow-black.svg" alt="arrow">
 									<a href="#"
 										class="content__shop-now content__shop-now--black content__shop-now--border-big">SHOP
 										NOW</a>
+									<img class="content__arrow" src="img/arrow-black.svg" alt="arrow">
 								</div>
 							</div>
 						</div>
@@ -117,10 +117,10 @@
 								<h2 class="content__phrase">Street Style Icon</h2>
 								<div class="content__discount">UPTO 60% OFF</div>
 								<div class="content__buttons content__buttons--big content__buttons--flex-end">
-									<img src="img/arrow-black.svg" alt="arrow">
 									<a href="#"
 										class="content__shop-now content__shop-now--black content__shop-now--border-big">SHOP
 										NOW</a>
+									<img class="content__arrow" src="img/arrow-black.svg" alt="arrow">
 								</div>
 							</div>
 						</div>
