--- a/lesson_19/index.html
+++ b/lesson_19/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
@@ -127,12 +127,11 @@
 					</div>
 				</div>
 			</div>
-	</div>
-	</main>
+		</main>
 
-	<footer class="footer">
-		FooteR
-	</footer>
+		<footer class="footer">
+			FooteR
+		</footer>
 	</div>
 </body>
 
